# robocasa-project-B

./: .gitignore  Makefile  README.md  REPORT_README.md  environment.yml  pyproject.toml  pytest.ini  report_analysis.ipynb  requirements-project.txt  setup.py
.github/workflows/: ci.yml
cluster_results/: eval_ppo_1m.json
configs/env/: open_single_door.yaml  open_single_door_curriculum.yaml  open_single_door_her.yaml  open_single_door_her_v2.yaml  open_single_door_her_v3.yaml
configs/train/: open_single_door_a2c.yaml  open_single_door_ppo.yaml  open_single_door_ppo_baseline.yaml  open_single_door_ppo_parallel.yaml  open_single_door_ppo_parallel_6env.yaml  open_single_door_sac.yaml  open_single_door_sac_debug.yaml  open_single_door_sac_her.yaml  open_single_door_sac_her_v2.yaml  open_single_door_sac_her_v3.yaml  open_single_door_sac_tuned.yaml  open_single_door_sac_v2.yaml  open_single_door_sac_v3.yaml  open_single_door_sac_v3_curriculum.yaml
docs/: ARCHITECTURE.md  CI.md  COLLABORATION.md  EXPERIMENTS.md  FILE_REFERENCE.md  METHODS.md  PACKAGES.md  RUNBOOK.md  curves_analysis.md  experiments_results.md  guide_general_prompting_projet_rl_robocasa_porte.md  issues_and_limitations.md  methodology_reward_metrics.md  metrics.md  model_improvements.md  planning_deadline_runs_rapport_rl_robocasa.md  platform_compatibility.md  progress_report.md  project_report.md  reproducibility.md  reproducibility_submission.md  results.md  reward_shaping.md  submission_checklist.md  technical_guide.md  troubleshooting.md  video_generation.md
docs/courbes/: README.md  readme_combined.md
figures/: eval_551k_hover.json  eval_855k_multi.json  results_summary_full.csv
mlruns/0/: meta.yaml
mlruns/419867357710711585/: meta.yaml
robocasa_telecom/: __init__.py  config_utils.py  debug_reward.py  env_factory.py  evaluate.py  plot_training.py  record_video.py  render_best_run.py  sanity.py  success_utils.py  train.py  watch_agent.py
robocasa_telecom/envs/: __init__.py  factory.py  reward.py  reward_shaping.py
robocasa_telecom/rl/: __init__.py  eval_video.py  evaluate.py  render_best_run.py  train.py
scripts/: compare_runs.py  plot_combined.py  plot_runs.py  plot_training.py  render_best_run.sh  run_eval.sh  run_train.sh  setup_conda.sh  setup_uv.sh  visualize_env.py  with_env.sh
tests/: test_checkpoints.py  test_config_loading.py  test_env_factory.py  test_metrics.py  test_platform_smoke.py  test_train_video_env.py
trained_models/: obs_config.json
(+32 files in other folders)
